discussion/kv_engine/128641/128641_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Split server_stats into global, aggregated and bucket specific stats

Will be useful when Prometheus needs to expose these stats so that:
 - global stats need only be collected once
 - per-bucket stat collected for each bucket and labelled
 - aggregated stats not exposed, as per the spec

Change-Id: Ice07efa0f018077d3e21a64fcd8c7fbdb365578d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-05-27 15:06:42.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-27 15:08:51.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2441/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:174:34: error: use of undeclared identifier "num_ops" [clang-diagnostic-error]
STAT(ep_num_ops_get_meta, count, num_ops, {{"op", "get_meta"}})
                                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2441/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:174:34:
error: use of undeclared identifier "num_ops" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2441/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24279/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/stats.def.h:174:34:
error: use of undeclared identifier "num_ops"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24279/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/957/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
